# spam-musubi

./: Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: publish-container-image.yaml
src/: main.rs  query.rs
src/filter/: mod.rs
src/query/: constants.rs  mod.rs
