[package]
name = "spam-musubi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
once_cell = "1.19.0"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
dotenvy = "0.15.7"
deadpool-postgres = "0.12.1"
thiserror = "1.0.57"
